# autoresearch-equativ-demo

./: .gitignore  pitch.md  pyproject.toml
ctr_prediction/: analysis.ipynb  make_progress.py  prepare.py  program.md  results.tsv  train.py
floor_pricing/: analysis.ipynb  prepare.py  program.md  train.py
