[project]
name = "autoresearch-equativ-demo"
version = "0.1.0"
description = "Autonomous optimization demos for Equativ — CTR prediction and floor pricing"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "requests>=2.31",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
